# Restaceratops2.0

./: .dockerignore  .env  .env.example  .gitignore  ADDITIONAL_CLEANUP.md  AI_PROVIDERS_GUIDE.md  AI_SETUP.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  DATA_CLEANUP_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  FRONTEND_DEPLOYMENT_FIX.md  MONGODB_SETUP.md  README.md  UNIFIED_BACKEND_GUIDE.md  conversation_logs.txt  demo_chat.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  env.example  package-lock.json  pyproject.toml  render.yaml  report.xml  start.sh  start_backend.py  start_unified_backend.py  vercel.json
agent/: __init__.py  assertions.py  chat_interface.py  client.py  dsl_loader.py  runner.py
agent/reporters/: console.py
backend/: Dockerfile  __init__.py  requirements.txt  test_reqres.py  test_reqres_fixed.py
backend/api/: __init__.py  backend.py  enterprise_api.py  main.py  restaceratops.js  unified_backend.py  workflow_api.py
backend/core/: __init__.py
config/: .env  .env.backup  requirements.txt  vercel.json
data/: report.xml
deployments/: aws-lambda.yml  github-actions.yml  heroku-app.json  kubernetes-cronjob.yml  serverless-costs.md
docs/: BACKEND_REORGANIZATION.md  FREE_AI_SETUP.md  PROJECT_IMPLEMENTATION_TRACKER.md  PROJECT_PROGRESS.md  PROJECT_STRUCTURE.md  README.md  REORGANIZATION_SUMMARY.md  RESTACERATOPS README.md
frontend/: Dockerfile  env.production  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json  vitest.config.ts
scripts/: check_deepseek_status.py  deploy-clean.sh  deploy-railway.sh  deploy-render.sh  deploy-serverless.sh  deploy-vercel.sh  deploy.sh  mongo-init.js  show_fallback_hierarchy.py  test_deepseek.py  test_enhanced_chat.py  test_openrouter.py  test_system_stats.py
tests/: demo.yml  feature_demo.yml  generated_openrouter.yml  simple_test.yml
vector_db/: chroma.sqlite3
(+83 files in other folders)
