
[tool.poetry]
name = "restaceratops"
version = "0.1.0"
description = "Async, AI‑augmented API‑testing agent"
authors = ["Your Name <you@example.com>"]
packages = [{include = "agent"}]

[tool.poetry.dependencies]
python = "^3.12"
httpx = {extras = ["http2"], version = "^0.27.0"}
pyyaml = "^6.0"
pydantic = "^2.7"
jsonschema = "^4.22"
jmespath = "^1.0"
tenacity = "^8.3"
prometheus-client = "^0.20"
openai = "^1.25"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
